changed application name, added Twitter Bootstrap
Change-Id: I2107317896d2d0dfc5f1e6af6be0f73d97503bbd

--- a/app/app.html
+++ b/app/app.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Hello Electron React!</title>
-    <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="../dist/style.css" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="../dist/bundle.js"></script>
-  </body>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Wer hat an der Uhr gedreht?</title>
+        <link rel="stylesheet" href="../node_modules/bootstrap/dist/boostrap.min.css">
+        <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="../dist/style.css">
+    </head>
+    <body>
+        <div id="root"></div>
+        <script src="../dist/bundle.js"></script>
+        <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    </body>
 </html>
