--- a/app/hot-dev-app.html
+++ b/app/hot-dev-app.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  	<meta charset="utf-8">
-    <title>Hello Electron React!</title>
-    <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.css" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="http://localhost:3000/dist/bundle.js"></script>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Wer hat an der Uhr gedreht?</title>
+        <link rel="stylesheet" href="../node_modules/bootstrap/dist/boostrap.min.css">
+        <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.css"/>
+    </head>
+    <body>
+        <div id="root"></div>
+        <script src="http://localhost:3000/dist/bundle.js"></script>
+        <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    </body>
 </html>
