header with navigation
Change-Id: Icad262603ffdac617860a5bb2e8bbe5d0f87d0c6

--- a/app/hot-dev-app.html
+++ b/app/hot-dev-app.html
@@ -4,12 +4,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Wer hat an der Uhr gedreht?</title>
-        <link rel="stylesheet" href="../node_modules/bootstrap/dist/boostrap.min.css">
-        <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.css"/>
+        <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
+        <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.css">
     </head>
     <body>
         <div id="root"></div>
         <script src="http://localhost:3000/dist/bundle.js"></script>
-        <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
     </body>
 </html>
