added basic journal based on todo list example from redux tutorial
Change-Id: Idd47ba9f0c8fbf3d69e7c94b8ba09b5a34cb4cd7

--- a/app/hot-dev-app.html
+++ b/app/hot-dev-app.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Wer hat an der Uhr gedreht?</title>
         <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
+        <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap-theme.css">
         <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.css">
     </head>
     <body>
